# fast_zero

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  db.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth_router.py  todo_router.py  users_router.py
fast_zero/routes/: users_routes.py
migrations/: env.py
migrations/versions/: 147181da562e_create_users_table.py  54c4816e4534_create_todos_table.py  91a4b36d816e_change_id_col_set_autoincrement.py  b6ecd9d16ec0_add_col_in_todo_table.py  eb69ec400df7_add_col_updated_at_in_the_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
